# finplan

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  PRODUCT.md  README.md  README.ru.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
app/: api.py  asgi.py  course.py  db.py  demo.py  forecast.py  fx.py  images.py  main.py  service.py  service_presets.py  services_econ.py
designs/: finplan Accounts.html  finplan Dashboard.html  finplan Expenses.html  finplan Income.html  finplan More.html  finplan Onboarding.html  finplan Settings.html  finplan Wishes.html
scripts/: perf_benchmark.py  seed_demo.py
tests/: conftest.py  test_api.py  test_api_services.py  test_audit_regressions.py  test_course.py  test_demo.py  test_forecast.py  test_fx.py  test_images.py  test_services_econ.py  test_settings_profile.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AccountsManager.tsx  BaseAside.tsx  CoachTour.tsx  CurrencySelect.tsx  InfoHint.tsx  InlineCell.tsx  Onboarding.tsx  OnboardingChecklist.tsx  OnboardingWizard.tsx  RefCombo.tsx  SectionHelp.tsx
web/src/lib/: aggregates.ts  api.ts  coach.ts  constants.ts  currencies.ts  format.ts  fx.ts  prefs.ts  theme.test.ts  theme.ts  wishImage.ts
web/src/pages/: Board.tsx  Course.tsx  Dashboard.tsx  Income.tsx  More.tsx  Plans.tsx  Services.tsx  Settings.tsx  Snapshot.tsx  Wishes.tsx
web/src/test/: audit.test.tsx  (+6 more)
(+1 files in other folders)
