[project]
name = "finplan"
version = "0.1.0"
description = "Личный cash-flow прогноз: снимки остатков, обязательства, поступления, gap-расчёт"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10",
    "pillow>=10",
    "psycopg2-binary>=2.9; platform_system == 'Linux'",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
